	* apps/nshlib/Kconfig:  Add some missing NSH configuration values.
	  From Lorenz Meier (2013-6-2).
	* Standardize on CONFIG_NSH_BUILTIN_APPS.  Remove all other variants
	  of the build-as-an-NSH-application configuration settings
	  (2013-6-12).

6.29 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/nsh, cxxtest, and helloxx:  C++ initializers should be
	  set once and, preferably, in the context of the task that uses any C++
	  statically initialized classes.  These only becomes an issue is cxxtest
	  or helloxx are built as NSH builtin applications.  Then you want the
	  initialization done in cxxtext or helloxx and not in NSH (and certainly
	  not twice).  Added configuration options to control who does the C++
	  initialization.  NSH now does not do C++ initialization be default and
	  must be configured to do otherwise.  Converserly, cxxtest and helloxx
	  will do C++ initialization unless configured do otherwise (2013-6-21).
	* apps/examples/cxxtext:  Add ostream test as provided by Michael
	  (2013-6-21).
	* apps/examples/nxhello:  Minor fix for compilation error when the
	  display resolution is low (< 8bpp) due to a typo that has been there
	  for a long time (2013-6-23).
	* apps/examplex/nxhello:  Correct default colors when in Y1 code mode.
	  (2013-6-24).
	* apps/system/Make.defs and Kconfig:  The RAM test was not correctly built
	  into the configuration and build system (2013-6-26).
	* apps/examples/composite/composite_main.c:  SourceForge But Ticket #19.
	  Change to prevent some false alarm debug assertions (From Chia Cheng
	  Tao, 2013-7-9).
	* apps/system/zmodem:  Add configuration support and a build framework
	  for the Zmodem sz and rz command (which exist but have not yet been
	  checked in) (2013-7-12).
	* apps/system/zmodem:  The 'sz' command is not complete and seems
	  functional (given on light testing).  The rz command logic exists but
	  is still untested and not yet checked in.